fix CYOS size in menu, CYOS menu z-index, and CYOS title alignment

--- a/src/components/ChooseYourOwnStory/ChooseYourOwnStory.scss
+++ b/src/components/ChooseYourOwnStory/ChooseYourOwnStory.scss
@@ -13,7 +13,8 @@ $menu-height: spacing(37.5);
       order: 2;
       padding: 0 spacing(16);
       position: sticky;
-      top: spacing(16);
+      margin-top: spacing(4);
+      top: calc(#{spacing(16)} + #{$header-height-desktop});
     }
   }
 
